Wed Jan 14 16:44:58 CET 2004 Daniel Veillard <daniel@veillard.com>

	* python/libxsl.py: applied shared lib loading patch for OS X from
	  Gianni Ceccarelli

Wed Jan 14 14:28:02 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libexslt/math.c, libexslt/common.c: fixed problem,
	  reported on the list by Markus Bayerlein, concerning
	  math functions on nodesets generated with
	  exslt:node-set
	* tests/exslt/math/max.3.xsl, tests/exslt/math/max.3.xml,
	  tests/exslt/math/max.3.out, tests/exslt/math/Makefile.am:
	  added test case for above.

Tue Jan 13 00:33:50 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: changed to assure comment which
	  preceeds root node is output after DTD (Bug 130433)
	* test/exslt/common/node-set.4.*: added test case for
	  Bug 130922

Mon Jan 12 12:51:45 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* doc/site.xsl: Changed logo spacing to avoid stacking
	* doc/*: rebuilt web pages

Sun Jan 11 20:10:09 MST 2004 John Fleck <jfleck@inkstain.net>

	* doc/site.xsl
	* doc/w3c.png
	* doc/*
	Test William's new site.xsl improvements by adding the
	W3C logo icon, rebuild docs, and presto! It shows up
	everywhere!

Mon Jan 10 08:33:18 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: Refined wrapper code with large
	  test case submitted by Norm Walsh. (Bug 130922)

Sun Jan 10 23:33:21 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: Added coding to create a xsltDocument
	  wrapper for an RVT, in order to produce the applicable
	  keys (Bug 130922)

Sat Jan  9 17:04:38 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* doc/search.xml, doc/search.templ, doc/Makefile.am,
	  doc/search.php.inc: Added new facility to "autogen"
	  the search script.  Fixed a few more problems with
	  the API page generation.
	* doc/site.xsl, doc/api.xsl, doc/newapi.xsl: integrated
	  the autogeneration of the php script.  Note that from
	  this point doc/search.php will be include in the
	  generic "Rebuilt docs".