@@ -1210,7 +1210,8 @@ xsltSaveResultTo(xmlOutputBufferPtr buf, xmlDocPtr result,
 	    while (child != NULL) {
 		xmlNodeDumpOutput(buf, result, child, 0, (indent == 1),
 			          (const char *) encoding);
-		if (child->type == XML_DTD_NODE)
+		if ((child->type == XML_DTD_NODE) ||
+		    (child->type == XML_COMMENT_NODE))
 		    xmlOutputBufferWriteString(buf, "\n");
 		child = child->next;
 	    }
