@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="iso-8859-1" standalone="no"?>
+<rootelement>
+  <childelement/>
+  <childelement/>
+</rootelement>
+
