@@ -1,2 +1,3 @@
 <?xml version="1.0"?>
-<!--libxslt:test element test worked-->SUCCESS
+<!--libxslt:test element test worked-->
+SUCCESS
