@@ -1,3 +1,15 @@
+Fri Jan 16 22:15:34 HKT 2004 William Brack <wbrack@mmm.com.hk>
+
+	* libxslt/xsltutils.c: added a newline for any comment before
+	  the root element (Bug 130433)
+	* libxslt/xslt.c: fixed problem with cdata-section-elements when
+	  default namespace is changed (Bug 130793)
+	* tests/extensions/module.out, tests/general/bug-100.out: adjusted
+	  for newline after comment change above.
+	* tests/general/Makefile.am, tests/general/bug-140.xsl,
+	  tests/general/Makefile.am, tests/docs/bug-140.xml: added test for
+	  cdata-section-elements problem.
+
 Wed Jan 14 16:44:58 CET 2004 Daniel Veillard <daniel@veillard.com>
 
 	* python/libxsl.py: applied shared lib loading patch for OS X from
